Terraform/internet_gateway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.myVPC.id

  tags = {
    Name = var.var_name
  }
}
